fixing design issue - 2

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,12 @@
       if (anchorTag) {
         anchorTag.style.color = textColor;
       }
+
+      // Set SVG fill color based on text color
+      var svgElement = document.getElementById("svg-element");
+      if (svgElement) {
+        svgElement.setAttribute("fill", textColor);
+      }
     }
 
     // Convert hexadecimal color to RGB
@@ -57,10 +63,10 @@
       var result = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
       return result
         ? {
-            r: parseInt(result[1], 16),
-            g: parseInt(result[2], 16),
-            b: parseInt(result[3], 16),
-          }
+          r: parseInt(result[1], 16),
+          g: parseInt(result[2], 16),
+          b: parseInt(result[3], 16),
+        }
         : null;
     }
 
